--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "mongoose": "^4.8.1",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "mysql": "^2.13.0"
   }
 }
