--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cookie-parser": "^1.4.3",
     "date-format": "^1.1.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.8.1",
     "morgan": "~1.6.1",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "whatap": "^0.1.4"
   }
 }
