--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "date-format": "^1.1.0",
     "debug": "~2.2.0",
